# df_naar_csv

./: .env.example  .gitignore  202124565 Geisha per 7 art.xlsx  BUG_FIXES_REPORT.md  HANDOFF.md  README_API.md  calculations.py  create_test_excel.py  pdf_summary.py  pyproject.toml  requirements.txt  rollen.py  run_api.py  source.py  summary.py  test  test.csv  test_api.py  test_calculations.py  test_csv_generation.py  test_pdf_summary.py  test_rollen.py  test_summary.py  werkenmetcalc_temp.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: calculations.py  files.py  summaries.py
app/core/: business_logic.py  config.py
app/models/: requests.py  responses.py
app/services/: calculation_service.py  file_service.py
test_excel/: 202124565 Geisha.xlsx
uploads/: aee5b8d3-3c66-4e1a-abcd-ddedabc94fdd_test_labels.csv  d70167c6-19a8-4269-a05a-5ea95909ea31_test_labels.xlsx
